2002-02-11  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	More split-up of source to make it more
			readable. Re-organization of mmap (now
			close to device open to prevent memory
			fragmentation. If the device is not
			otherwise needed, I strongly advise to 
			use OpenOnce yes (now default).
			Changed handling of Timestamp, Font-eninge
			is loaded/initialized once only at startup
			and if config is re-read.

2002-02-10  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Added DaemonSeconds as alternative to Daemon
			in conf - value given is taken as seconds
			instead of milliseconds (see conf).

	* vgrabbj.c: 	Added some exit routine to mmap'ed capture
			to avoid endless loops (2).

2002-02-09  Jens Gecius  <jens@gecius.de>

	* v_config.c:	Added a parameter to discard frames before
			the actual picture is taken. Might be
			necessary, if your cam needs a little time
			for adjustment of the current brightness.

2002-02-08  Jens Gecius  <jens@gecius.de>

	* v_config.c:	Fixed a #define bug in checkfiles (if you
			do not have TTF on your system it's
			relevant, otherwise not)
			
	* configure.in:	Certain systems seem to have the freetype
			header (v1) in a different directory than
			debian does. Added appropriate check.

2002-02-06  Jens Gecius  <jens@gecius.de>

	* v_config.c: 	Closed a memory hole generated by the
			config-re-read code.
			Changed the default of SetImageSize in
			the .conf to On (Off should be the special
			case for certain cams, not vice versa).

2002-02-05  Jens Gecius  <jens@gecius.de>

	* vgrabbj.c: 	Rearranged the initializing of vgrabbj to
			accomodate a new function: the conf-file
			will be re-read if you send a SIGHUP signal
			to the daemon!
			Moved more stuff to v_config, which has 
			nothing to do with the actual grabbing.
			Adjusted the changed commandline parameters
			in the help output (thanks to Michael)			
			Reorganized memory management (hopefully
			without memory-leak - let me know if it